navbar on large screen

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
+  @import url('https://fonts.googleapis.com/css2?family=Damion&family=Nunito&family=Satisfy&display=swap');
 
 * {
   box-sizing: border-box;
