what remote global is not about

--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,6 +1,7 @@
-.home{
-
-  &-content{
-    padding-top: 120px;
-  }
-}
+// .home{
+// margin: 0 2rem;
+// width: 90%;
+//   &-content{
+//     padding-top: 120px;
+//   }
+// }
