--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -1,19 +1,57 @@
-.about{
-  width: 90%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+.about {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 
-  &-main{
-    height: 50vh;
-    text-align: center;
-    
-    @media screen and (min-width: 768px){
-      width: 50vw;
+	&-main {
+		height: 100vh;
+		text-align: center;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		h1 {
+			@media screen and (min-width: 768px) {
+				width: 70%;
+			}
+
+			@media screen and (max-width: 768px) {
+				font-size: 20px;
+			}
+		}
+	}
+
+	&-whatWeDo {
+		height: 100vh;
+		width: 90%;
+		text-align: center;
+
+  
+    @media screen and (min-width:1440px){
+      width: 50%;
     }
-  }
+
+		&-box {
+			padding-top: 2rem;
+			display: grid;
+			gap: 2rem;
+
+      @media screen and (min-width:768px){
+        grid-template-columns: 1fr 1fr;
+      }
+		}
+
+		&-card {
+			background: #eee;
+			padding: 1rem;
+			text-align: center;
+
+      p{
+        padding-top: 1rem;
+      }
+		}
+	}
 }
 
-// i love this hue
-//background: radial-gradient(black, transparent);
+
