--- a/src/styles/_companies.scss
+++ b/src/styles/_companies.scss
@@ -33,14 +33,67 @@
 		}
 	}
 
+	&-data {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		//  justify-content: center;
+		text-align: center;
+		margin-bottom: 2rem;
+
+		&-about {
+			padding: 1rem 0;
+		}
+
+		&-size {
+			color: grey;
+			display: flex;
+			align-items: center;
+			gap: 0.8rem;
+
+			span {
+				background: grey;
+				padding: 5px 10px;
+				color: #fff;
+				font-size: 0.8rem;
+			}
+		}
+
+		&-footer {
+			display: flex;
+			justify-content: space-around;
+			bottom: 1rem;
+			position: absolute;
+			width: 90%;
+			align-items: center;
+
+			p {
+				font-size: 0.8rem;
+				color: grey;
+			}
+		}
+	}
+
 	&-list {
 		display: flex;
 		flex-wrap: wrap;
 		gap: 1rem;
 
 		article {
-			background: #ddd;
-			//color: #fff;
+			padding: 0.5rem 1rem;
+			background: #fff;
+			border-radius: 2px;
+			display: inline-block;
+			//height: 300px;
+			margin: 1rem;
+			position: relative;
+			width: 300px;
+			box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3),
+				0 15px 12px rgba(0, 0, 0, 0.22);
+
+			//h1{
+			//	text-align: center;
+			//}
 		}
 	}
 
