--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -6,10 +6,10 @@
 }
 
 .about {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
+	// display: flex;
+	// justify-content: center;
+	// align-items: center;
+	// flex-direction: column;
 
 	&-main {
 		height: 100vh;
@@ -33,6 +33,7 @@
 		height: 100vh;
 		width: 90%;
 		text-align: center;
+		margin: 0 auto;
 
 		@media screen and (min-width: 1440px) {
 			width: 50%;
