--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -9,7 +9,10 @@
 
 html,
 body {
-  //max-width: 100vw;
   overflow-x: hidden;
   font-family: 'Nunito', sans-serif;
+}
+
+body{
+  min-height: 100%;
 }
