--- a/src/styles/_pitch.scss
+++ b/src/styles/_pitch.scss
@@ -20,8 +20,9 @@
 		justify-content: center;
 		align-items: center;
     flex-direction: column;
+
 		form {
-			padding: 2rem 0;
+			margin-top: 1rem;
 			display: grid;
 			gap: 1rem;
 
